<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ghlzm.iot</groupId>
    <artifactId>spring-boot-iot</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>spring-boot-iot</name>
    <description>spring-boot-iot</description>

    <packaging>pom</packaging>

    <modules>
        <module>spring-boot-iot-common</module>
        <module>spring-boot-iot-framework</module>
        <module>spring-boot-iot-auth</module>
        <module>spring-boot-iot-system</module>
        <module>spring-boot-iot-device</module>
        <module>spring-boot-iot-protocol</module>
        <module>spring-boot-iot-message</module>
        <module>spring-boot-iot-rule</module>
        <module>spring-boot-iot-alarm</module>
        <module>spring-boot-iot-report</module>
        <module>spring-boot-iot-admin</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <skipTests>true</skipTests>

        <spring-boot.version>4.0.0</spring-boot.version>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <dynamic-datasource.version>4.5.0</dynamic-datasource.version>
        <hutool.version>5.8.32</hutool.version>
        <jwt.version>4.4.0</jwt.version>
        <redisson.version>4.3.0</redisson.version>
        <knife4j.version>4.5.0</knife4j.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <lombok.version>1.18.34</lombok.version>
        <mysql.version>8.4.0</mysql.version>
        <taos-jdbcdriver.version>3.5.3</taos-jdbcdriver.version>
        <mqtt.client.version>1.2.5</mqtt.client.version>
        <netty.version>4.1.112.Final</netty.version>
        <jackson3.version>3.0.2</jackson3.version>

         <ghlxk.version>2024.0.0</ghlxk.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- MyBatis Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- Dynamic Datasource -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>dynamic-datasource-spring-boot4-starter</artifactId>
                <version>${dynamic-datasource.version}</version>
            </dependency>

            <!-- Redisson -->
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <!-- Hutool -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>${jwt.version}</version>
            </dependency>

            <!-- Knife4j -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <!-- MQTT Client -->
            <dependency>
                <groupId>org.eclipse.paho</groupId>
                <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
                <version>${mqtt.client.version}</version>
            </dependency>

            <!-- Netty -->
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>

            <!-- Database Drivers -->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>

            <!-- TDengine JDBC Driver -->
            <dependency>
                <groupId>com.taosdata.jdbc</groupId>
                <artifactId>taos-jdbcdriver</artifactId>
                <version>${taos-jdbcdriver.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- Jackson 3 -->
            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson3.version}</version>
            </dependency>

            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson3.version}</version>
            </dependency>

            <!-- Internal Modules -->
            <dependency>
                <groupId>com.ghlzm.iot</groupId>
                <artifactId>spring-boot-iot-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ghlzm.iot</groupId>
                <artifactId>spring-boot-iot-framework</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ghlzm.iot</groupId>
                <artifactId>spring-boot-iot-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ghlzm.iot</groupId>
                <artifactId>spring-boot-iot-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ghlzm.iot</groupId>
                <artifactId>spring-boot-iot-device</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ghlzm.iot</groupId>
                <artifactId>spring-boot-iot-protocol</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ghlzm.iot</groupId>
                <artifactId>spring-boot-iot-message</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ghlzm.iot</groupId>
                <artifactId>spring-boot-iot-alarm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ghlzm.iot</groupId>
                <artifactId>spring-boot-iot-report</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.ghlxk.cloud</groupId>
                <artifactId>ghlxk-spring-boot-starter-aes</artifactId>
                <version>${ghlxk.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <parameters>true</parameters>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <skipTests>${skipTests}</skipTests>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>


</project>
